tests/derive_ui/stable/non_existent_attr.stderr
error[E0599]: no method named `non_existing_attribute` found for struct `Arg` in the current scope
  --> tests/derive_ui/stable/non_existent_attr.rs:14:19
   |
14 |     #[clap(short, non_existing_attribute = 1)]
   |                   ^^^^^^^^^^^^^^^^^^^^^^ method not found in `Arg<'_>`
